ちょっと修正

--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
             <li>
               <a
                 href="http://www.twitter.com"
-                target="blank"
+                target="_blank"
                 rel="noopener noreferrer"
                 ><img src="./img/twitter.png" alt="" class="icon"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="http://www.facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="./img/facebook.png" alt="" class="icon"
               /></a>
             </li>
           </ul>
@@ -49,9 +57,7 @@
         <li>メールアドレス：XXXXXXXXXXXXXXX.co.jp</li>
         <p>
           電話番号：0312341234　　
-          <button class="tel_btn">
-            <a href="tel:0312341234">発信</a>
-          </button>
+          <a class="tel_btn" href="tel:0312341234">発信</a>
         </p>
       </ul>
     </section>
