--- a/index.html
+++ b/index.html
@@ -50,16 +50,18 @@
     <!-- About -->
     <section id="about" class="wrapper">
       <h2 class="sec-title">ABOUT</h2>
-      <ul>
-        <li>株式会社 CODE9</li>
-        <li>Web制作会社</li>
-        <li>Webサイト・アプリ開発致します</li>
-        <li>メールアドレス：XXXXXXXXXXXXXXX.co.jp</li>
-        <p>
-          電話番号：0312341234　　
-          <a class="tel_btn" href="tel:0312341234">発信</a>
-        </p>
-      </ul>
+      <div class="about-sec">
+        <ul>
+          <li>株式会社 CODE9</li>
+          <li>Web制作会社：Webサイト・アプリ開発致します</li>
+          <li>メールアドレス：XXXXXXXXXXXXXXX.co.jp</li>
+          <p>
+            電話番号：0312341234　　
+            <a class="tel_btn" href="tel:0312341234">発信</a>
+          </p>
+        </ul>
+        <div class="office-img"></div>
+      </div>
     </section>
 
     <!-- Works -->
@@ -113,5 +115,6 @@
     <footer>
       <p>code9 Co. Ltd 2023 ©</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
