横スクロールバー対応

--- a/index.html
+++ b/index.html
@@ -48,72 +48,74 @@
     </div>
 
     <!-- About -->
-    <section id="about" class="wrapper">
-      <h2 class="sec-title">ABOUT</h2>
-      <div class="about-sec">
+    <div class="container">
+      <section id="about" class="wrapper">
+        <h2 class="sec-title">ABOUT</h2>
+        <div class="about-sec">
+          <ul>
+            <li>株式会社 CODE9</li>
+            <li>Web制作会社：Webサイト・アプリ開発致します</li>
+            <li>メールアドレス：XXXXXXXXXXXXXXX.co.jp</li>
+            <p>
+              電話番号：0312341234　　
+              <a class="tel_btn" href="tel:0312341234">発信</a>
+            </p>
+          </ul>
+          <div class="office-img"></div>
+        </div>
+      </section>
+
+      <!-- Works -->
+      <section id="works" class="wrapper">
+        <h2 class="sec-title">WORKS</h2>
         <ul>
-          <li>株式会社 CODE9</li>
-          <li>Web制作会社：Webサイト・アプリ開発致します</li>
-          <li>メールアドレス：XXXXXXXXXXXXXXX.co.jp</li>
-          <p>
-            電話番号：0312341234　　
-            <a class="tel_btn" href="tel:0312341234">発信</a>
-          </p>
+          <li><img src="./img/works1.jpg" alt="works1" /></li>
+          <li><img src="./img/works3.jpg" alt="works1" /></li>
+          <li><img src="./img/works6.jpg" alt="works1" /></li>
+          <li><img src="./img/works3.jpg" alt="works1" /></li>
+          <li><img src="./img/works4.jpg" alt="works1" /></li>
+          <li><img src="./img/works5.jpg" alt="works1" /></li>
+          <li><img src="./img/works2.jpg" alt="works1" /></li>
+          <li><img src="./img/works1.jpg" alt="works1" /></li>
+          <!-- <li><img src="" alt="" /></li> -->
+          <!-- <li><img src="./img/works1.jpg" alt="works1" /></li> -->
         </ul>
-        <div class="office-img"></div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Works -->
-    <section id="works" class="wrapper">
-      <h2 class="sec-title">WORKS</h2>
-      <ul>
-        <li><img src="./img/works1.jpg" alt="works1" /></li>
-        <li><img src="./img/works3.jpg" alt="works1" /></li>
-        <li><img src="./img/works6.jpg" alt="works1" /></li>
-        <li><img src="./img/works3.jpg" alt="works1" /></li>
-        <li><img src="./img/works4.jpg" alt="works1" /></li>
-        <li><img src="./img/works5.jpg" alt="works1" /></li>
-        <li><img src="./img/works2.jpg" alt="works1" /></li>
-        <li><img src="./img/works1.jpg" alt="works1" /></li>
-        <!-- <li><img src="" alt="" /></li> -->
-        <!-- <li><img src="./img/works1.jpg" alt="works1" /></li> -->
-      </ul>
-    </section>
-
-    <!-- News -->
-    <section id="news" class="wrapper">
-      <h2 class="sec-title">NEWS</h2>
-      <dl>
-        <dt>2022 12/20</dt>
-        <dd>会社設立</dd>
-        <dt>2022 12/20</dt>
-        <dd>新事業スタート</dd>
-        <dt>2022 12/20</dt>
-        <dd>サイト開設</dd>
-        <dt>2022 12/20</dt>
-        <dd>サイトリリース</dd>
-      </dl>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="wrapper">
-      <h2 class="sec-title">CONTACT</h2>
-      <p>お問合せフォームはこちらから</p>
-      <form action="toiawase.html">
+      <!-- News -->
+      <section id="news" class="wrapper">
+        <h2 class="sec-title">NEWS</h2>
         <dl>
-          <dt><label for="name">名前</label></dt>
-          <dd><input type="text" id="name" /></dd>
-          <dt><label for="email">メールアドレス</label></dt>
-          <dd><input type="email" id="email" /></dd>
-          <dt><label for="content">内容</label></dt>
-          <dd><textarea id="content" cols="30" rows="10"></textarea></dd>
+          <dt>2022 12/20</dt>
+          <dd>会社設立</dd>
+          <dt>2022 12/20</dt>
+          <dd>新事業スタート</dd>
+          <dt>2022 12/20</dt>
+          <dd>サイト開設</dd>
+          <dt>2022 12/20</dt>
+          <dd>サイトリリース</dd>
         </dl>
-        <button type="submit">送信</button>
-      </form>
-    </section>
+      </section>
+
+      <!-- Contact -->
+      <section id="contact" class="wrapper">
+        <h2 class="sec-title">CONTACT</h2>
+        <p>お問合せフォームはこちらから</p>
+        <form action="toiawase.html">
+          <dl>
+            <dt><label for="name">名前</label></dt>
+            <dd><input type="text" id="name" /></dd>
+            <dt><label for="email">メールアドレス</label></dt>
+            <dd><input type="email" id="email" /></dd>
+            <dt><label for="content">内容</label></dt>
+            <dd><textarea id="content" cols="30" rows="10"></textarea></dd>
+          </dl>
+          <button type="submit">送信</button>
+        </form>
+      </section>      
+    </div>
     <footer>
-      <p>code9 Co. Ltd 2023 ©</p>
+      <p>© 2023 code9 Co.Ltd</p>
     </footer>
     <script src="script.js"></script>
   </body>
